# github-export

./: .gitignore  README.md  flake.nix  package-lock.json  package.json
.github/: copilot-instructions.md
.github/docs/SubAgent docs/: DEV_MOCK_MODE_review.md  DEV_MOCK_MODE_spec.md  NIX_FLAKE_review.md  NIX_FLAKE_review_final.md  NIX_FLAKE_spec.md  OAUTH_DEVICE_FLOW_review.md  OAUTH_DEVICE_FLOW_spec.md  actions_bug_fix_review.md  actions_bug_fix_spec.md  actions_tab_review.md  actions_tab_review_final.md  actions_tab_spec.md  actions_workflow_runs_fix_review.md  actions_workflow_runs_fix_spec.md  create_issue_review.md  create_issue_review_final.md  create_issue_spec.md  expandable_detail_view_review.md  expandable_detail_view_review_final.md  expandable_detail_view_spec.md  github_auth_fix_review.md  github_auth_fix_spec.md  issue_actions_review.md  issue_actions_spec.md  issue_export_fix_review.md  issue_export_fix_spec.md  multi_account_review.md  multi_account_review_final.md  multi_account_spec.md  notification_badges_review.md  notification_badges_spec.md  security_alerts_fix_review.md  security_alerts_fix_review_final.md  security_alerts_fix_spec.md  (+5 more)
.github/workflows/: nix.yml
scripts/: preflight.ps1  preflight.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  storage.rs
src-tauri/src/export/: csv_export.rs  mod.rs  pdf_export.rs
src-tauri/src/github/: actions.rs  auth.rs  detail.rs  issues.rs  mod.rs  pulls.rs  security.rs
src-tauri/src/mock/: mod.rs
src-tauri/src/models/: mod.rs
